Version 1.0-7 (2013-02.07)
o Made some heplot3d() examples \dontrun{} to reduce example execution time to satisfy CRAN nits

Version 1.0-6 (2013-01-14)
o Added label.ellipse() as a more general exported function.
o heplot() gets a label.pos= argument allowing more flexible labeling, with
  the label position to be specified (bottom, left, top, right or center)
o Added coefplot S3 generic and a coefplot.mlm method to plot ellipses for mlm coefficients.
  This generalizes car::confidenceEllipse to the mlm setting.

Version 1.0-4 (2012-12-29)
o Added interpPlot for plotting interpolations between two data sets, with data ellipses, etc.
  Main use for this is in animated demos of multivariate statistical concepts.
o interpPlot gains add=, points= and col= arguments for greater control of graphical parameters.

Version 1.0-2 (2012-12-05)
o Added schooldata and further example of comparison of mlm with robmlm()

Version 1.0-1 (2012-10-18)
o Added simple robmlm methods for robust mlms with print and summary methods and a vcov.mlm method.
  This allows heplot() and related methods to show robust HE plots.

Version 1.0-0 (2012-6-3)
o Added Olso data
o Corrected error in demo/OBK.R

Version 0.9-13 (2012-5-18)
o Extended HE-examples vignette with example based on SocGrades data

Version 0.9-12 (2012-04-03)
o Added Skulls data
o Extended HE-examples vignette with example based on Skulls data
o Changed the default colors for heplot() and heplot1d() to allow global setting
  of options("heplot.colors"); similarly, heplot3d() now allows a global option
  for colors, options("heplot3d.colors"), differing only in using pink for error
  ellipsoid.
o Extended Hernior.Rd examples to show 1D plots in canonical space; added a discussion of
  this example to HE-examples vignette.
o Extended SocGrades.Rd examples to show plots in canonical space.

Version 0.9-11 (2012-01-12)
o Added Probe1, Probe2 data sets-- repeated measures design
o Added Sake data

Version 0.9-10 (2011-09-12)