@@ -1,5 +1,6 @@
 Version 1.0-7 (2013-02.07)
 o Made some heplot3d() examples \dontrun{} to reduce example execution time to satisfy CRAN nits
+o In heplot.mlm(), added ... to label.ellipse to be able to pass cex=
 
 Version 1.0-6 (2013-01-14)
 o Added label.ellipse() as a more general exported function.
